; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/pcmcia/extr_ds.c_pcmcia_create_newid_file.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/pcmcia/extr_ds.c_pcmcia_create_newid_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pcmcia_driver = type { i32, i32* }

@driver_attr_new_id = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pcmcia_driver*)* @pcmcia_create_newid_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pcmcia_create_newid_file(%struct.pcmcia_driver* %0) #0 {
  %2 = alloca %struct.pcmcia_driver*, align 8
  %3 = alloca i32, align 4
  store %struct.pcmcia_driver* %0, %struct.pcmcia_driver** %2, align 8
  store i32 0, i32* %3, align 4
  %4 = load %struct.pcmcia_driver*, %struct.pcmcia_driver** %2, align 8
  %5 = getelementptr inbounds %struct.pcmcia_driver, %struct.pcmcia_driver* %4, i32 0, i32 1
  %6 = load i32*, i32** %5, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load %struct.pcmcia_driver*, %struct.pcmcia_driver** %2, align 8
  %10 = getelementptr inbounds %struct.pcmcia_driver, %struct.pcmcia_driver* %9, i32 0, i32 0
  %11 = call i32 @driver_create_file(i32* %10, i32* @driver_attr_new_id)
  store i32 %11, i32* %3, align 4
  br label %12

12:                                               ; preds = %8, %1
  %13 = load i32, i32* %3, align 4
  ret i32 %13
}

declare dso_local i32 @driver_create_file(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
